# wp-executor

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
scripts/: config.example.toml  install-linux.sh  install-macos.sh  install-windows.ps1  uninstall-linux.sh  uninstall-macos.sh  uninstall-windows.ps1
src/: auth.rs  caps.rs  cli.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  net_guard.rs  types.rs  worker.rs
src/caps/: fs_list.rs  fs_read.rs  fs_write.rs  http_request.rs  shell_run.rs  system_info.rs
tests/: worker_loop.rs
