[package]
name = "wp-executor"
version = "1.0.4"
edition = "2021"
rust-version = "1.80"
authors = ["Setyenv Build <build@setyenv.com>"]
description = "Open-source remote execution agent for the WP-PFWorkflow platform. Consumes the platform's published REST contract, runs the host-side actions a workflow requires, and returns structured results."
license = "MIT OR Apache-2.0"
repository = "https://github.com/setyenv/wp-executor"
keywords = ["wordpress", "automation", "executor", "queue", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "wp-executor"
path = "src/main.rs"

[lib]
name = "wp_executor"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "process", "fs", "signal", "time", "io-util", "sync", "net"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1"
anyhow = "1"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
dirs = "5"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
hostname = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
mime_guess = "2"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio = { version = "1.40", features = ["test-util", "macros", "rt-multi-thread"] }

[profile.release]
strip = true
opt-level = 3
lto = "thin"
codegen-units = 1
